@@ -1,5 +1,5 @@
 module Admin::NodeHelper
-  
+
   def render_node(page, locals = {})
     @current_node = page
     locals.reverse_merge!(:level => 0, :simple => false).merge!(:page => page)
@@ -25,15 +25,15 @@ module Admin::NodeHelper
     end
     @expanded_rows
   end
-  
+
   def expanded
     show_all? || expanded_rows.include?(@current_node.id)
   end
-  
+
   def padding_left(level)
     (level * 22) + 4
   end
-  
+
   def children_class
     unless @current_node.children.empty?
       if expanded
@@ -45,30 +45,30 @@ module Admin::NodeHelper
       " no-children"
     end
   end
-  
+
   def virtual_class
     @current_node.virtual? ? " virtual": ""
   end
-  
+
   def expander
     unless @current_node.children.empty?
-      image((expanded ? "collapse" : "expand"), 
-            :class => "expander", :alt => 'toggle children', 
+      image((expanded ? "collapse" : "expand"),
+            :class => "expander", :alt => 'toggle children',
             :title => '')
     else
       ""
     end
   end
-  
+
   def icon
     icon_name = @current_node.virtual? ? 'virtual-page' : 'page'
     image(icon_name, :class => "icon", :alt => 'page-icon', :title => '')
   end
-  
+
   def node_title
     %{<span class="title">#{ @current_node.title }</span>}
   end
-  
+
   def page_type
     display_name = @current_node.class.display_name
     if display_name == 'Page'
@@ -77,11 +77,11 @@ module Admin::NodeHelper
       %{<small class="info">(#{ display_name })</small>}
     end
   end
-  
+
   def spinner
-    image('spinner.gif', 
-            :class => 'busy', :id => "busy-#{@current_node.id}", 
-            :alt => "",  :title => "", 
+    image('spinner.gif',
+            :class => 'busy', :id => "busy-#{@current_node.id}",
+            :alt => "",  :title => "",
             :style => 'display: none;')
   end
 end
