@@ -1,0 +1,4 @@
+require File.dirname(__FILE__) + "/../spec_helper"
+
+describe SiteHelper do
+end
